# MfxVCG

./: .gitmodules  CMakeLists.txt  README.md  build-gcc.sh  build-mingw.bat
cmake/: FetchOpenMfx.cmake  FetchVcgLib.cmake  dependencies.cmake  utils.cmake
src/: CMakeLists.txt  VcgMesh.h  VcgPlugin.cpp  VcgPlugin.h  mfx_vcg_plugin.cpp
src/CppPluginSupport/src/: MfxParam.cpp
src/plugins/: CMakeLists.txt  VcgMesh.h  VcgPlugin.cpp  VcgPlugin.h  mfx_vcg_plugin.cpp
